Fix iOS modal causing the body to jump to top.

--- a/root-dev/css/main.css
+++ b/root-dev/css/main.css
@@ -14,14 +14,13 @@ body {
   display: none; }
 
 .modal {
-  overflow-y: hidden; }
+  overflow-y: hidden;
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: inherit; }
   .modal body {
     position: relative; }
-  .modal.safari {
-    position: fixed;
-    right: 0;
-    left: 0;
-    top: inherit; }
 
 @font-face {
   font-family: 'icons';
